Caught some regressions in merging, and fix some spacing

--- a/css/style.css
+++ b/css/style.css
@@ -654,8 +654,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #3DCC87;
-  margin-left: 203px;
-  margin-top: 324px;
+  margin-left: 273px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -665,8 +665,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 203px;
-  margin-top: 324px;
+  margin-left: 273px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -677,8 +677,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 267px;
   width: 24px;
   background: #EF3030;
-  margin-left: 340px;
-  margin-top: 524px;
+  margin-left: 410px;
+  margin-top: 564px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -688,8 +688,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 340px;
-  margin-top: 324px;
+  margin-left: 410px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -699,8 +699,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #3DCC87;
-  margin-left: 490px;
-  margin-top: 324px;
+  margin-left: 560px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -710,8 +710,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 490px;
-  margin-top: 324px;
+  margin-left: 560px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -721,8 +721,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 267px;
   width: 24px;
   background: #EF3030;
-  margin-left: 630px;
-  margin-top: 524px;
+  margin-left: 700px;
+  margin-top: 564px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -732,8 +732,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 630px;
-  margin-top: 324px;
+  margin-left: 700px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -743,8 +743,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #3DCC87;
-  margin-left: 770px;
-  margin-top: 324px;
+  margin-left: 840px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -754,8 +754,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 770px;
-  margin-top: 324px;
+  margin-left: 840px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -765,8 +765,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #3DCC87;
-  margin-left: 900px;
-  margin-top: 324px;
+  margin-left: 970px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
@@ -776,8 +776,8 @@ the bar for what the user did/accomplished will be "....bar_user_accomp_week_#" 
   height: 467px;
   width: 24px;
   background: #DEDEDE;
-  margin-left: 900px;
-  margin-top: 324px;
+  margin-left: 970px;
+  margin-top: 364px;
   border-top-right-radius: 15px;
   border-top-left-radius: 15px;
 }
